force-app/main/default/objects/mkto_si__InterestingMomentsCache__c/mkto_si__InterestingMomentsCache__c.object-meta.xml
<CustomObject>
    <label>InterestingMomentsCache</label>
    <nameField>
        <label>InterestingMomentsCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InterestingMomentsCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>