force-app/main/default/objects/mkto_si__InterestingMomentsCache__c/fields/mkto_si__AccountLink__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__AccountLink__c</fullName>
    <label>AccountLink</label>
    <type>Url</type>
</CustomField>