force-app/main/default/objects/mkto_si__InterestingMomentsCache__c/fields/mkto_si__MomentNote__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__MomentNote__c</fullName>
    <label>MomentNote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>