force-app/main/default/objects/mkto_si__InterestingMomentsCache__c/fields/mkto_si__RowNum__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__RowNum__c</fullName>
    <label>RowNum</label>
    <length>3</length>
    <type>Text</type>
</CustomField>